<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="5dp">

            <ImageView
                android:id="@+id/movie_Banner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:srcCompat="@drawable/ic_launcher_background" />

        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="5dp"
            >

            <TextView
                android:id="@+id/labelTitulo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/labelTitulo"
                android:textStyle="bold"
                android:paddingRight="5dp"/>

            <TextView
                android:id="@+id/title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/titulo" />

        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="5dp"
            >

            <TextView
                android:id="@+id/titleOriginalLabel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/labelTituloOriginal"
                android:textStyle="bold"
                android:paddingRight="5dp"/>

            <TextView
                android:id="@+id/titleOriginal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/tituloOriginal" />

        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="5dp"
            >

            <TextView
                android:id="@+id/titleRemanisedLabel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/labelTituloRemanufacturado"
                android:textStyle="bold"
                android:paddingRight="5dp"/>

            <TextView
                android:id="@+id/titleRemanised"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/tituloRemanufacturado" />

        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="5dp"
            >

            <TextView
                android:id="@+id/releaseDateLabel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/labelAño"
                android:textStyle="bold"
                android:paddingRight="5dp"/>

            <TextView
                android:id="@+id/releaseDate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/año" />

        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="5dp"
            >

            <TextView
                android:id="@+id/runningTimeLabel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/labelDuraccion"
                android:textStyle="bold"
                android:paddingRight="5dp"/>

            <TextView
                android:id="@+id/runningTime"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/duraccion" />

            <TextView
                android:id="@+id/timeMin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text=" min" />

        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="5dp">

            <TextView
                android:id="@+id/scoreLabel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/labelCalificacion"
                android:textStyle="bold"
                android:paddingRight="5dp"/>

            <TextView
                android:id="@+id/score"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/calificacion" />
            <TextView
                android:id="@+id/scoreTotal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="/100" />

        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="5dp"
            >

            <TextView
                android:id="@+id/directorLabel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/labelDirector"
                android:textStyle="bold"
                android:paddingRight="5dp"/>

            <TextView
                android:id="@+id/director"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/director" />

        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="5dp"
            >

            <TextView
                android:id="@+id/productorLabel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/labelProductor"
                android:textStyle="bold"
                android:paddingRight="5dp"/>

            <TextView
                android:id="@+id/productor"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/productor" />

        </LinearLayout>

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="5dp"
            >

            <TextView
                android:id="@+id/descripcionLabel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/labelDescripcion"
                android:textStyle="bold"
                android:paddingBottom="5dp"/>

            <TextView
                android:id="@+id/descripcion"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/descripcion" />

        </LinearLayout>

    </LinearLayout>
</RelativeLayout>